# rfbs

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt
cmake/sha1/: CMakeLists.txt
cmake/tomlc99/: .CMakeLists.txt.swp  CMakeLists.txt
res/: build.toml
res/src/: main.rf
src/: .main.c.swp  .toml_processing.c.swp  args.c  args.h  file_change.c  file_change.h  main.c  toml_processing.c  toml_processing.h
